Mejora de seguridad en la API