@@ -9,6 +9,7 @@ import org.springframework.web.bind.annotation.RequestParam;
 import org.springframework.web.bind.annotation.RestController;
 
 import java.net.HttpURLConnection;
+import java.net.URI;
 import java.net.URL;
 import java.util.Set;
 import java.util.concurrent.TimeUnit;
@@ -29,11 +30,20 @@ public class ImageProxyController {
 
     private static final int CONNECT_TIMEOUT_MS = 5_000;
     private static final int READ_TIMEOUT_MS = 10_000;
+    /** Límite de 5 MB para imágenes proxificadas. */
+    private static final int MAX_IMAGE_BYTES = 5 * 1024 * 1024;
 
     @GetMapping("/image")
     public ResponseEntity<byte[]> proxyImage(@RequestParam String url) {
         try {
-            URL imageUrl = new URL(url);
+            URL imageUrl = URI.create(url).toURL();
+
+            // Solo se permiten esquemas HTTP/HTTPS (evita file://, jar://, etc.)
+            String protocol = imageUrl.getProtocol().toLowerCase();
+            if (!protocol.equals("http") && !protocol.equals("https")) {
+                return ResponseEntity.status(403).build();
+            }
+
             String host = imageUrl.getHost().toLowerCase();
 
             boolean allowed = ALLOWED_DOMAINS.stream()
@@ -54,7 +64,18 @@ public class ImageProxyController {
                 return ResponseEntity.status(responseCode).build();
             }
 
-            byte[] imageBytes = connection.getInputStream().readAllBytes();
+            // Rechazar si Content-Length supera el límite antes de leer
+            int contentLength = connection.getContentLength();
+            if (contentLength > MAX_IMAGE_BYTES) {
+                return ResponseEntity.status(413).build();
+            }
+
+            // Leer con límite estricto para evitar descargas masivas
+            byte[] imageBytes;
+            try (var is = connection.getInputStream()) {
+                imageBytes = is.readNBytes(MAX_IMAGE_BYTES);
+            }
+
             String contentType = connection.getContentType();
 
             return ResponseEntity.ok()
